feat(execution): possible NoSuchElementException on State.getEndDate
Also add test to cover getStartDate(), getEndDate() (terminated/paused/running
branches), getDuration(), getDurationOrComputeIt(), humanDuration(),
maxDate(), minDate(), and State.Type.fail(Task).